Adds example mock network calls
